--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "TODO",
-  "description": "TODO",
+  "name": "Svelte-Tempalte",
+  "description": "1Mind template",
   "version": "0.0.1",
   "scripts": {
     "dev": "sapper dev",
@@ -12,8 +12,11 @@
     "test": "run-p --race dev cy:run"
   },
   "dependencies": {
+    "autoprefixer": "^9.8.0",
     "compression": "^1.7.1",
     "polka": "next",
+    "postcss": "^7.0.31",
+    "postcss-load-config": "^2.1.0",
     "sirv": "^0.4.0"
   },
   "devDependencies": {
